--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -4,21 +4,17 @@
   min-height: 100vh; /* Establece el contenedor para que tenga al menos el 100% de la altura de la ventana visible (viewport height) */
 }
 
-
-.btn{
+.btn {
   margin: 30px;
 }
 
-
 /* Establece un ancho para el contenedor del slider */
 .slider-container {
-  max-width: 100px; /* Ajusta este valor según tus necesidades */
   margin: 0 auto; /* Centra el contenedor horizontalmente */
   display: flex; /* Utiliza flexbox para centrar la imagen */
   justify-content: center; /* Centra horizontalmente la imagen */
   align-items: center; /* Centra verticalmente la imagen */
 }
-
 
 /* Establece el ancho deseado para la imagen del slider */
 .img-slider {
@@ -28,4 +24,36 @@
 
 .justificado {
   text-align: justify;
+}
+
+/* En tu archivo de estilos CSS personalizado */
+.img-mas-grande {
+  width: 100%; /* La imagen ocupará todo el ancho del contenedor */
+  height: 5%; /* La imagen ocupará todo el alto del contenedor */
+  object-fit: cover; /* La imagen se ajustará para llenar todo el contenedor sin recortar */
+}
+button.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: all 0.3s linear;
+  border-radius: 10px;
+  border: 1px solid #bedbf2;
+  padding: 10px 20px;
+}
+
+button.button > svg {
+  margin-left: 5px;
+  transition: all 0.4s ease-in;
+}
+
+button.button:hover > svg {
+  font-size: 1.2em;
+  transform: translateX(6px);
+}
+
+button.button:hover {
+  box-shadow: 10px 10px 40px #d1d1d1;
+  transform: translateY(-5px);
 }
