--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,6 +25,17 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="/ver-pedido">Ver Pedido</a>
           </li>
+          <button class="button" routerLink="/iniciar-sesion">
+            <span>Iniciar Sesion</span>
+            <svg width="15" height="15" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M13.5 4.5L21 12m0 0l-7.5 7.5M21 12H3" stroke-linejoin="round" stroke-linecap="round"></path>
+            </svg>
+          </button>
+          
+          
+          
+          
+       
           
          
         </ul>
@@ -84,6 +95,7 @@
         <br><br><br>
         <h3>Helado a la Plancha</h3>
         <p>Es una tecnica artesanal de elaboracion Tailandesa motivo por el que le conocemos como helado Tailandes.</p>
+        <br><br>
         <h5>Una Experiencia Unica</h5>
         <p class="justificado">Esta hecho a base de crema natural con ingredientes especiales, se mezcla en la plancha a menos 20 grados se estira y se saca en rollitos permitiendo la adicion de toppings, fruta fresca al gusto del consumidor. </p>
       </div>
@@ -102,6 +114,7 @@
         <h6>No contiene conservadores, saborizantes ni colorantes</h6>
         <p>Jovenes de: 2 hasta 17 años</p>
         <p>Adultos de: 18 hasta 90 años</p>
+        <br><br><br>
         
       </div>
     </div>
@@ -179,107 +192,33 @@
     </div>
   </div>
   <!--- End of Menu -->
-  <!--- Start of Reservation-->
-  <div class="row" id="Reservation">
-    <div class="col navMenu">
-          <h2 class="text-center">~ Reservation ~</h2>
-    </div>
-  </div>
-  <div class="row">
-    <div class=" col-lg-12 reserve-container" data-aos="fade-up">
-      <img class="img-fluid image-reserve" src="assets/images/reserve.jpg">
-      <div class="reserve-text col-lg-12 ">
-        <h1 class="text-center">Timetables</h1>
-        <div class="row">
-          <div class="col-6">
-               <h2 class="text-center">Lunch</h2>
-              <h5 class="text-center">12:00 - 15:00</h5>
-          </div>
-          <div class="col-6">
-              <h2 class="text-center">Dinner</h2>
-              <h5 class="text-center">19:30 - 23:30</h5>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <br>
-  <div class="row bg-light">
-    <div class="col">
-      <form>
-        <div class="form-row">
-            <div class="form-group col-6">
-              <h3>Reserve</h3>
-              <label for="inputDate"> Date</label>
-              <input type="date" class="form-control" id="inputDate" placeholder="Data gg/mm/aaaa">
-            </div>
-            <div class="form-group col-6">
-              <h3>Details</h3>
-              <label for="inputName"> Name</label>
-              <input type="text" class="form-control" id="inputName" placeholder="Name">
-            </div>
-            <div class="form-group col-6">
-              <label for="inputTime"> Timetables</label>
-              <input type="time" class="form-control" id="inputTime" placeholder="Timetables">
-            </div>
-            <div class="form-group col-6">
-              <label for="inputEmail"> Email</label>
-              <input type="email" class="form-control" id="inputEmail" placeholder="Email">
-            </div>
-            <div class="form-group col-6">
-              <label for="inputNumber"> Number of Guests</label>
-              <input type="number" class="form-control" id="inputNumber" placeholder="Number of Guests">
-            </div>
-            <div class="form-group col-6">
-              <label for="inputCel"> Phone</label>
-              <input type="tel" class="form-control" id="inputCel" placeholder="Phone">
-            </div>
-            <div class="form-group col-12">
-              <label for="inputComment"> Further requests</label>
-            <textarea class="form-control" rows="4" id="inputComment" placeholder="Further requests"></textarea>
-          </div>
-         </div>
-        <div class="row">
-            <div class="col-md-4 col-md-offset-4">
-              <button type="submit" class="btn btn-secondary btn-block">Reserve</button>
-            </div>
-          </div>
-      </form>
-    </div>
-  </div>
+
+    <img class="img-fluid" src="assets/images/wall.jpg">
+<br><br><br><br><br><br><br>
+
+
   <!--- End of Reserve -->
   <!--- Start of Our Location -->
   <div class="row" id="OurLocation">
     <div class="col navMenu">
-      <h2 class="text-center">~ Our Location ~</h2>
+      <h2 class="text-center">~ Buscanos ~</h2>
     </div>
   </div>
   <div class="row">
     <div class="col-md-3">
-      <h3>Address:</h3>
+      <h3>Calle:</h3>
       <p>Test street no 78963 </p>
       <h3>Email:</h3>
       <p>mail@example.com</p>
     </div>
     <div class="col-md-3">
-      <h3>Address:</h3>
-      <p>Test street no 78963 </p>
+      <h3>Telefono:</h3>
+      <p>301 2415660 </p>
       <h3>Email:</h3>
-      <p>mail@example.com</p>
+      <p>email@example.com</p>
     </div>
-    <div class="col-md-3">
-      <h3>Address:</h3>
-      <p>Test street no 78963 </p>
-      <h3>Email:</h3>
-      <p>mail@example.com</p>
-    </div>
-    <div class="col-md-3">
-      <h3>Address:</h3>
-      <p>Test street no 78963 </p>
-      <h3>Email:</h3>
-      <p>mail@example.com</p>
-    </div>
-  </div>
+    
+    
   <!--- End of Our Location -->
   <div class="row footer bg-light">
     <div class="col">
@@ -288,18 +227,9 @@
         <a class="social-icon" href="#"><i class="fab fa-instagram"></i></a></p>
     </div>
     <div class="col">
-      <p class="text-center">Copyright &copy; 2020</p>
+      <p class="text-center">Copyright &copy; 2023</p>
     </div>
-    <div class="col">
-      <p class="text-center">Powered by: <a href="#">with love</a></p>
-    </div>
-  </div>
-  </div>
+   
   
 
-  <!-- Botones "Hacer pedido" y "Ver pedido" -->
-  <div class="d-flex justify-content-center mt-4">
-    <button class="btn btn-primary" routerLink="/hacer-pedido">Hacer pedido</button>
-    <button class="btn btn-secondary" routerLink="/ver-pedido">Ver pedido</button>
-  </div>
-</div>
+ 
