--- a/src/app/crear-usuario/crear-usuario.component.html
+++ b/src/app/crear-usuario/crear-usuario.component.html
@@ -30,7 +30,7 @@
           <span>Confirmar contraseña</span>
         </label>
         <button class="submit">Aceptar</button>
-        <p class="signin">¿Ya tienes una cuenta? <a href="#">Iniciar Sesion</a></p>
+        <p class="signin">¿Ya tienes una cuenta? <a href="#" routerLink="/iniciar-sesion">Iniciar Sesion</a></p>
       </form>
     </div>
   </div>
