--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -57,3 +57,78 @@ button.button:hover {
   box-shadow: 10px 10px 40px #d1d1d1;
   transform: translateY(-5px);
 }
+
+/* Estilos para el enlace de shopping con la clase "shopping shopping2" */
+/* Estilos para el enlace de shopping con la clase "shopping shopping2" */
+.shopping-container {
+  position: relative;
+  display: inline-block;
+}
+
+.shopping.shopping2 {
+  width: 40px;
+  height: 40px;
+  background-color: #3567a8;
+  margin-right: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  border-radius: 50%;
+  text-align: center;
+  transition: 0.3s;
+  position: relative;
+}
+
+
+.common-title4 h1 span{color:#76459d}.common-title4 h2 span{color:#76459d}.common-title4 h3{color:#76459d}
+.info-area{position:relative}.info-area img{width:inherit}.info-area .info-shapes .info-s-1{position:absolute;left:0;top:3%;transform:rotate(-171deg)}.info-area .info-shapes .info-s-2{position:absolute;right:0;top:3%}.single-info{border:1px solid #e1e1e1;padding:15px 20px;border-radius:5px;height:100%;background:#fff;margin-bottom:30px}@media (max-width: 767.98px){.single-info{height:inherit}}.single-info .info-img{margin-right:10px;margin-bottom:20px}.single-info .info-img img{width:inherit}.single-info .info-content p{padding-top:10px}
+.meddy-deep-bg{background-color:#ffc6cd !important}.purple-lite-bg{background-color:#ffdcfd !important}.item-bounce{-webkit-animation:bounce 3s infinite ease-in-out;-o-animation:bounce 3s infinite ease-in-out;-ms-animation:bounce 3s infinite ease-in-out;-moz-animation:bounce 3s infinite ease-in-out;animation:bounce 3s infinite ease-in-out}@keyframes bounce{0%{transform:translateY(-5px)}50%{transform:translateY(10px)}100%{transform:translateY(-5px)}} .meddy-bg{background-color:#fcdbb3 !important}
+
+
+
+
+.common-title4 h3 {
+  font-family: 'Caveat', cursive;
+  font-size: 36px;
+  line-height: 43.2px;
+  text-align: center;
+  letter-spacing: normal;
+}
+
+
+
+
+
+.common-title4 h2 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 48px;
+  line-height: 57.6px;
+  text-align: center;
+  letter-spacing: normal;
+}
+
+
+/* Establecer la imagen de fondo para la clase .info-area */
+.info-area {
+  background-image: url('../../assets/images/fondo2.jpg'), url('../../assets/images/fondo3.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+#restaurant-section {
+  position: relative;
+  background-image: url('../../assets/images/fondo3.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 20px;
+}
+
+#restaurant-section > .row.bg-light {
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 30px;
+  border-radius: 10px;
+}
+
