home con bosstrap

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,9 @@
     <!---Start navigation Bar -->
     <nav class="navbar navbar-fixed-top navbar-light bg-light">
       <a class="navbar-brand" href="#Welcome">
-        <img src="assets/images/helados-wow-_1_.png" width="50" height="50" class="d-inline-block" alt=""> Helados WOW
+        <img src="assets/images/helados-wow-_1_.png" class="custom-img d-inline-block" alt=""> Helado WOW
+
+
       </a>
       <div class="ml-auto d-flex align-items-center"> <!-- Updated the <ul> to a <div> with class "ml-auto d-flex align-items-center" -->
         <a class="shopping-container" routerLink="/hacer-pedido">
@@ -179,7 +181,7 @@
   </div>
   <!--- End of Menu -->
 
-    <img class="img-fluid" src="assets/images/wall.jpg">
+
 
 
 
@@ -203,37 +205,29 @@
                 <div class="col-lg-4 col-md-4 wow fadeInUp" data-wow-delay=".2s">
                     <div
                         class="single-info d-flex flex-sm-row flex-md-column flex-lg-row justify-content-around align-items-center meddy-bg">
-                        <div class="info-img">
-                            <img src="assets/images/img/ice-icon8.png" alt="">
-                        </div>
                         <div class="info-content text-center text-lg-left">
-                            <h5>Phone Us 24/7</h5>
-                            <p>123-5879406</p>
+                            <h5>Telefono</h5>
+                            <p>301-241-5660</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4 wow fadeInUp" data-wow-delay=".4s">
                     <div
                         class="single-info d-flex flex-sm-row flex-md-column flex-lg-row  justify-content-around align-items-center meddy-deep-bg">
-                        <div class="info-img">
-                            <img src="assets/images/img/ice-icon8.png" alt="">
-                        </div>
+                       
                         <div class="info-content text-center text-lg-left">
-                            <h5>Get Direction</h5>
-                            <p>Sector:7, Road:27, House:18,
-                                Uttara, Dhaka, 1230 Dhaka.</p>
+                            <h5>Direccion</h5>
+                            <p>Calle 89 #7 sur 73 Santa Maria</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4 wow fadeInUp" data-wow-delay=".6s">
                     <div
                         class="single-info d-flex flex-sm-row flex-md-column flex-lg-row  justify-content-around align-items-center purple-lite-bg">
-                        <div class="info-img">
-                            <img src="assets/images/img/ice-icon8.png" alt="">
-                        </div>
+                        
                         <div class="info-content text-center text-lg-left">
-                            <h5>Opening Hours</h5>
-                            <p>Everyday 11.00 PM - 11.00 AM</p>
+                            <h5>Horario</h5>
+                            <p>8am - 10:30pm</p>
                         </div>
                     </div>
                 </div>
@@ -241,16 +235,7 @@
         </div>
     </div>
 
-  <!--- End of Our Location -->
-  <div class="row footer bg-light">
-    <div class="col">
-      <p class="text-center">Follow us: 
-        <a class="social-icon" href="#"><i class="fab fa-facebook"></i></a> 
-        <a class="social-icon" href="#"><i class="fab fa-instagram"></i></a></p>
-    </div>
-    <div class="col">
-      <p class="text-center">Copyright &copy; 2023</p>
-    </div>
+  
    
   
 
