--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -4,6 +4,12 @@
   min-height: 100vh; /* Establece el contenedor para que tenga al menos el 100% de la altura de la ventana visible (viewport height) */
 }
 
+.custom-img {
+  width: 50px;
+  height: 50px;
+}
+
+
 .btn {
   margin: 30px;
 }
@@ -111,7 +117,7 @@ button.button:hover {
 
 /* Establecer la imagen de fondo para la clase .info-area */
 .info-area {
-  background-image: url('../../assets/images/fondo2.jpg'), url('../../assets/images/fondo3.png');
+  background-image: url('../../assets/images/j.jpg'), url('../../assets/images/fondo3.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
