--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,7 +1,6 @@
 .container {
   display: flex;
   flex-direction: column;
-  min-height: 100vh; /* Establece el contenedor para que tenga al menos el 100% de la altura de la ventana visible (viewport height) */
 }
 
 .custom-img {
@@ -624,7 +623,7 @@ button.button:hover {
 }
 
 .tab-content {
-  display: none;
+  display: block;
 }
 
 .tab-content.active {
