Creacion de pedido v3

--- a/src/app/hacer-pedido/hacer-pedido.component.html
+++ b/src/app/hacer-pedido/hacer-pedido.component.html
@@ -5,7 +5,28 @@
     </div>
   </div>
 
-  <!-- Opciones para el tamaño del helado -->
+  <!-- Opciones para el helado -->
+
+  <div class="row"style="padding-bottom: 80px;">
+    <div class="col-6">
+      <h4>Helado:</h4>
+
+      <select class="form-select" >
+        <option disabled selected [ngValue]="null">Selecciona un helado</option>
+        <option *ngFor="let helado of helados" [value]="helado.id">{{ helado.nombre }}</option>
+      </select>
+
+    </div>
+    <div class="col-6">
+      <h4>Endulsante:</h4>
+      <select class="form-select">
+        <option disabled selected [ngValue]="null">Selecciona una opcion</option>
+        <option value="1">Si</option>
+        <option value="0">No</option>
+      </select>
+    </div>
+
+  </div>
 
 
 
@@ -14,16 +35,16 @@
     <div class="col-4">
       <h4>Salsa:</h4>
 
-      <select class="form-select" [(ngModel)]="selectedSalsa">
-        <option disabled [ngValue]="null">Selecciona la salsa</option>
+      <select class="form-select" >
+        <option disabled selected [ngValue]="null">Selecciona la salsa</option>
         <option *ngFor="let salsa of salsas" [value]="salsa.id">{{ salsa.nombre }}</option>
       </select>
 
     </div>
     <div class="col-4">
       <h4>Topping:</h4>
-      <select class="form-select" [(ngModel)]="selectedTopings">
-        <option disabled [ngValue]="null">Selecciona el topping</option>
+      <select class="form-select" >
+        <option disabled selected [ngValue]="null">Selecciona el topping</option>
         <option *ngFor="let toping of topings" [value]="toping.id">{{ toping.nombre }}</option>
       </select>
     </div>
@@ -32,8 +53,8 @@
     <div class="col-4">
       <h4>Fruta:</h4>
 
-      <select class="form-select" [(ngModel)]="selectedFruta">
-        <option disabled [ngValue]="null">Selecciona la fruta</option>
+      <select class="form-select" >
+        <option disabled selected [ngValue]="null">Selecciona la fruta</option>
         <option *ngFor="let fruta of frutas" [value]="fruta.id">{{ fruta.nombre }}</option>
       </select>
 
@@ -43,16 +64,16 @@
     <div class="col-4">
       <h4>Dulce:</h4>
 
-      <select class="form-select" aria-label="Default select example" [(ngModel)]="selectedDulce">
-        <option disabled [ngValue]="null">Selecciona el dulce</option>
+      <select class="form-select" aria-label="Default select example" >
+        <option disabled selected [ngValue]="null">Selecciona el dulce</option>
         <option *ngFor="let dulce of dulces" [value]="dulce.id">{{ dulce.nombre }}</option>
       </select>
     </div>
 
     <div class="col-4">
       <h4>Especial:</h4>
-    <select class="form-select" [(ngModel)]="selectedEspecial">
-      <option disabled [ngValue]="null">Selecciona el especial</option>
+    <select class="form-select" >
+      <option disabled selected [ngValue]="null">Selecciona el especial</option>
       <option *ngFor="let especial of especiales" [value]="especial.id">{{ especial.nombre }}</option>
     </select>
 
@@ -60,8 +81,8 @@
     <div class="col-4">
       <h4>Licor:</h4>
 
-      <select class="form-select" [(ngModel)]="selectedLicor">
-        <option disabled [ngValue]="null">Selecciona el licor</option>
+      <select class="form-select" >
+        <option disabled selected [ngValue]="null">Selecciona el licor</option>
         <option *ngFor="let licor of licores" [value]="licor.id">{{ licor.nombre }}</option>
       </select>
     </div>
