Ultimos cambios Home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -219,8 +219,7 @@
     <div class="menu-shapes">
       <span class="ds-1"><img src="assets/images/shapes/34.png" alt="" /></span>
       <span class="ds-2 item-bounce"
-        ><img src="assets/images/cam.jpg" alt=""
-      /></span>
+        ><img src="assets/images/cam.jpg" alt="" /></span>
       <span class="ds-3"
         ><img src="assets/images/shapes/donar.png" alt=""
       /></span>
@@ -388,9 +387,7 @@
                       <img src="assets/images/extra.png" alt="" />
                     </div>
                     <h6>Extra Menu</h6>
-                    <span class="g-s-4"
-                      ><img src="assets/images/shapes/10.png" alt=""
-                    /></span>
+                    
                     <span class="g-s-5"
                       ><img src="assets/images/shapes/14.png" alt=""
                     /></span>
