--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -531,10 +531,11 @@ button.button:hover {
   right: -1%;
   bottom: 20%;
 }
-.home2-menu-area .menu-shapes .ds-2 {
+.home2-menu-area .menu-shapes .ds-2.small-image{
   position: absolute;
-  right: -9%;
-  bottom: 40%;
+  right: -15%; 
+  bottom: 70%; 
+  width: 20px;
 }
 .home2-menu-area .menu-shapes .ds-3 {
   position: absolute;
